# personas

./: .editorconfig  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  config.example.yaml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: MODELS.md  QUICKSTART.md  TROUBLESHOOTING.md
scripts/: install.sh  run.sh
src/persona_gen/: __init__.py  engines.py  index.html  server.py
tests/: conftest.py  test_engines.py  test_security.py  test_server.py
